@@ -13,9 +13,10 @@ gtrigger::gtrigger(QWidget *parent, goptions *Opts, map<string, sensitiveDetecto
 	
 	// top: choose what to show
 	QComboBox *whatToShow = new QComboBox;
-	whatToShow->addItem("Voltages and Triggers");
 	whatToShow->addItem("Voltages only");
 	whatToShow->addItem("Triggers only");
+	whatToShow->addItem("Voltages and Triggers");
+	whatToShow->addItem("Summary");
 	connect ( whatToShow   , SIGNAL( currentIndexChanged (int) ), this, SLOT( choosePlots(int)    ) );
 
 	
@@ -38,21 +39,15 @@ gtrigger::gtrigger(QWidget *parent, goptions *Opts, map<string, sensitiveDetecto
 }
 
 
-
-void gtrigger::createGraphs()
+int gtrigger::determineNhits()
 {
-	int graphVsize   = 150;
-	int triggerValue = 3500;
-	
-	// clear all widgets first
+	// clear all widgets
 	for(unsigned i=0; i<vGraphsplitter->count(); i++)
-	{
-		vGraphsplitter->widget(i)->hide();
 		vGraphsplitter->widget(i)->deleteLater() ;
-	}
 	
-	// first determine how many total hits
-	unsigned ntotHits = 0;
+
+	// determine how many total hits
+	unsigned nHits = 0;
 	for(map<string, sensitiveDetector*>::iterator it = SeDe_Map.begin(); it!= SeDe_Map.end(); it++)
 	{
 		MHitCollection *MHC = it->second->GetMHitCollection();
@@ -64,10 +59,19 @@ void gtrigger::createGraphs()
 				{
 					MHit *aHit = (*MHC)[h];
 					if(aHit->diditpassTrigger())
-						ntotHits++;
+						nHits++;
 				}
 			}
 	}
+	return nHits;
+}
+
+void gtrigger::createGraphs()
+{
+	int graphVsize   = 150;
+	int triggerValue = 3500;
+	
+	unsigned ntotHits = determineNhits();
 	
 	// now creating all the graphs
 	vGraphsplitter->setMinimumSize(540, ntotHits*graphVsize);
@@ -141,6 +145,7 @@ void gtrigger::createGraphs()
 					pid.push_back(2212);
 					tpid.push_back(1000);
 					
+					// trick to add vertical transition lines between 0 and trigger
 					if(trig[i] > 0)
 					{
 						while(goingUp < triggerValue)
@@ -170,19 +175,115 @@ void gtrigger::createGraphs()
 				
 				int gIndex = dIndex + ntriggers - 1;
 				allGraphs[gIndex]->setFixedAxis(0, 500, 0, 4000);
-				allGraphs[gIndex]->plots_bg("bunch [4*ns]", "", dtime, dqadc, title);
-				if(plotChoice == 0 || plotChoice == 2) allGraphs[gIndex]->plot_graph(dttime, dtrig, tpid);
-				if(plotChoice == 0 || plotChoice == 1) allGraphs[gIndex]->plot_graph(dtime, dqadc, pid);
+				allGraphs[gIndex]->plots_bg("time [ns]", "", dtime, dqadc, title);
+				if(plotChoice == 2 || plotChoice == 0) allGraphs[gIndex]->plot_graph(dtime, dqadc, pid);
+				if(plotChoice == 2 || plotChoice == 1) allGraphs[gIndex]->plot_graph(dttime, dtrig, tpid);
 
 			}
 		
 			dIndex += ntriggers ;
 		}
-		
 	}
-	
 }
 
+void gtrigger::createSummary()
+{
+	int triggerValue = 40;
+	
+	unsigned ntotHits = determineNhits();
+	
+	
+	graph* summaryGraph = new graph();
+	// Graph axis origins and legth, number of ticks each axis
+	//                 xorig  yorig  xlength ylength nticksx nticksy
+	summaryGraph->setAxis(25,   475,    435,   450,     5,    5);
+	// inside shift of the axis ticks, and factor that multiplies the ticks size
+	summaryGraph->setInside(5, 2, 2);
+	summaryGraph->setPensWidth(2, 2);
+	summaryGraph->setMinimumSize(545, 560);
+	summaryGraph->setMaximumSize(545, 560);
+	
+	
+	vGraphsplitter->setMinimumSize(540, 570);
+	vGraphsplitter->addWidget(summaryGraph);
+	vGraphsplitter->addWidget(summaryGraph);
+
+
+	int ntriggers = 0;
+	// graph colors, index.
+	int gcolors[8] = {22, 11, 211, 2212, -11, 13, -13, -211};
+	int igcolor = 0;
+	double xTitlePos = 350;  // position of detector labels
+	double yTitlePos = 500;
+	double dyTitlePos = 40;
+	for(map<string, sensitiveDetector*>::iterator it = SeDe_Map.begin(); it!= SeDe_Map.end(); it++)
+	{
+		MHitCollection *MHC = it->second->GetMHitCollection();
+		int nhits = 0;
+		if(MHC) nhits = MHC->GetSize();
+		if(VOLTAGES.find(it->first) != string::npos)
+		{
+			for(int h=0; h<nhits; h++)
+			{
+				MHit *aHit = (*MHC)[h];
+				if(aHit->diditpassTrigger() == 0)
+					continue;
+				
+				ntriggers++;
+				
+				
+				// title set for debugging purposes only
+				string title = it->first + " ";
+				
+				vector<identifier> identi = aHit->GetId();
+				for(unsigned int i=0; i<identi.size(); i++)
+					title += identi[i].name + " " + stringify(identi[i].id) + "   " ;
+				
+				vector<int> time = aHit->getQuantumT();
+				vector<int> trig = aHit->getQuantumTR();
+				
+				// pid needed to differentiate colors
+				vector<int> pid;
+				
+				vector<double> dtime;
+				vector<double> dtrig;
+				
+			
+				for(unsigned int i=0; i<time.size(); i++)
+				{
+					dtime.push_back((double) time[i]);
+					
+					if(trig[i])
+						dtrig.push_back(triggerValue*ntriggers);
+					else
+						dtrig.push_back(-10000);
+					
+					pid.push_back(gcolors[igcolor]);
+					
+				}
+				
+				
+				summaryGraph->setFixedAxis(0, 500, 0, ntotHits*triggerValue);
+				if(ntriggers == 1)
+				{
+					summaryGraph->plots_bg("time [ns]", "", dtime, dtrig, "Triggers SUmmary");
+				}
+				summaryGraph->plot_graph(dtime, dtrig, pid);
+				
+			}
+			// labels at the top
+			yTitlePos = 400 - igcolor*dyTitlePos;
+			summaryGraph->plotLabel(it->first, gcolors[igcolor], xTitlePos, yTitlePos, 32);
+
+			igcolor++;
+			if(igcolor == 8) igcolor = 0;
+
+			
+		}
+	}
+
+	
+}
 
 gtrigger::~gtrigger()
 {
@@ -196,7 +297,8 @@ gtrigger::~gtrigger()
 void gtrigger::choosePlots(int index)
 {
 	plotChoice = index;
-	createGraphs();
+	if(plotChoice != 3) createGraphs();
+	else createSummary();
 }
 
 
